--- a/aziotctl/Cargo.toml
+++ b/aziotctl/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.59"
 structopt = "0.3"
 sysinfo = "0.15.3"
+time = { version = "0.3", features = ["parsing", "serde"] }
 tokio = { version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
 toml = "0.5"
 url = "2"
