--- a/identity/aziot-cloud-client-async/Cargo.toml
+++ b/identity/aziot-cloud-client-async/Cargo.toml
@@ -8,7 +8,6 @@ publish = false
 [dependencies]
 async-trait = "0.1"
 base64 = "0.13"
-chrono = "0.4"
 futures-util = "0.3"
 hyper = "0.14"
 hyper-openssl = "0.9"
@@ -16,6 +15,7 @@ log = "0.4"
 percent-encoding = "2"
 serde = "1"
 serde_json = "1"
+time = "0.3"
 tokio = { version = "1", features = ["time"] }
 url = "2"
 
